@@ -1,5 +1,0 @@
-include $(top_srcdir)/examples/Makefile.am_fragment
-
-noinst_PROGRAMS = demo
-demo_SOURCES = main.cc window.cc window.h primitives.cc primitives.h page.h 
-
