@@ -1,5 +1,0 @@
-include $(top_srcdir)/examples/Makefile.am_fragment
-
-noinst_PROGRAMS = example
-example_SOURCES = main.cc examplewindow.cc examplewindow.h
-
